--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing ="20">
       <tr>
         <td>
-        <img intrinsicsize="200 x 250" width="200" height="150" src="img/arjun.jpg" alt="Arjun vagadiya">
+        <img intrinsicsize="200 x 250" width="200" height="150" src="arjun vagadiya pic.jpg" alt="Arjun vagadiya">
         </td>
         <td>
           <h1>Arjun Vagadiya</h1>
